--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 <head>
   <meta charset="utf-8">
 
-  <title>iluvballs/ihateballs</title>
+  <title>I Love Balls!</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css">
-  <!-- <script src="scripts/page.js"></script>
-  <script src="scripts/ball.js"></script> -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
