--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
   <div class="title" id="banner">
     <h1>I Love Balls!</h1>
+    <h2>Click anywhere on the canvas for a new ball! :)</h2>
   </div>
   <canvas id="canvas"></canvas>
   <script src="scripts/ball.js"></script>
