--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta charset="utf-8">
 
   <title>I Love Balls!</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Ball Animation">
+  <meta name="author" content="Canvas Ball Animation">
 
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
